# django-webp-converter

./: .gitignore  README.rst  manage.py  setup.py
django-webp-converter/: LICENSE  MANIFEST.in  setup.cfg  setup.py
django-webp-converter/webp_converter/: context_processors.py  models.py  utils.py
django-webp-converter/webp_converter/conf/: settings.py
django-webp-converter/webp_converter/management/commands/: clear_webp_cache.py
django-webp-converter/webp_converter/migrations/: 0001_initial.py  0002_auto_20191202_1616.py  0003_auto_20191202_1621.py
django-webp-converter/webp_converter/templatetags/: webp_converter.py
django-webp-converter/webp_converter/tests/: test_context_processors.py  test_management_commands.py  test_models.py  test_utils.py
django_webp_converter/: settings.py  urls.py  views.py  wsgi.py
docs/: Makefile  changelog.rst  conf.py  index.rst  installation.rst  make.bat  settings.rst  usage.rst
sample_site/sample_site/: settings.py  urls.py
sample_site/tests/test_webp_converter/: test_context_processors.py  test_management_commands.py  test_models.py  test_templatetags.py  test_utils.py
templates/: image_sample.html
webp_converter/: context_processors.py  models.py  utils.py
webp_converter/conf/: settings.py
webp_converter/management/commands/: __init__.py  clear_webp_cache.py
webp_converter/migrations/: 0001_initial.py
webp_converter/templatetags/: webp_converter.py
webp_converter/tests/: test_context_processors.py  test_management_commands.py  test_models.py  test_templatetags.py  test_utils.py
